test_suite5/ALAN/test_suite/alan-2022-examples/failing/004630_mutation.alan
source B begin leave get 60) end
